# image_save

devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/image_saver/: image_saver_node
devel/lib/pkgconfig/: image_saver.pc  usb_cam.pc
devel/lib/usb_cam/: usb_cam_node
devel/share/image_saver/cmake/: image_saverConfig.cmake
devel/share/usb_cam/cmake/: usb_camConfig.cmake
src/image_saver/: CMakeLists.txt  package.xml
src/image_saver/include/: image_saver.hpp
src/image_saver/src/: image_cb.cpp  image_saver.cpp
